--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,6 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.5.2",
-    "paper-elements": "Polymer/paper-elements#~0.5.2"
+    "polymer": "Polymer/polymer#~0.5.2"
   }
 }
