--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "bower": "0.6.x"
   },
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
